tests/snapshots/select__all_pass.snap
---
source: tests/select.rs
expression: "run(\"all_pass\", 0)"
---
notes
  ✓ guest  select  all  6 visible
coverage 1/8 cells (12.5%) · 7 unspecified (warn)
notes
  ○ alice  select, insert, update, delete
  ○ guest  insert, update, delete
0 failed · 1 passed · 0 inconclusive
