tests/snapshots/select__all_too_strict_hides_rows.snap
---
source: tests/select.rs
expression: "run(\"all_too_strict\", 1)"
---
notes
  ✗ guest  select  all  hidden 4 of the 6 rows it should see: id=1, id=3, id=5, id=6
coverage 1/8 cells (12.5%) · 7 unspecified (warn)
notes
  ○ alice  select, insert, update, delete
  ○ guest  insert, update, delete
1 failed · 0 passed · 0 inconclusive
