tests/snapshots/select__deny_pass_without_a_grant.snap
---
source: tests/select.rs
expression: "run(\"deny_no_grant\", 0)"
---
notes
  ✓ guest  select  deny  permission denied
0 failed · 1 passed · 0 inconclusive
