tests/snapshots/select__deny_pass_without_a_policy.snap
---
source: tests/select.rs
expression: "run(\"deny_no_policy\", 0)"
---
notes
  ✓ guest  select  deny  0 visible
0 failed · 1 passed · 0 inconclusive
