tests/snapshots/select__deny_using_true_leaks_everything.snap
---
source: tests/select.rs
expression: "run(\"deny_using_true\", 1)"
---
notes
  ✗ guest  select  deny  leaked 6 of 6 rows: id=1, id=2, id=3, id=4, id=5, …
1 failed · 0 passed · 0 inconclusive
