tests/snapshots/select__rows_permissive_policy_widens_the_tenant_policy.snap
---
source: tests/select.rs
expression: "run(\"rows_permissive_widens\", 1)"
---
notes
  ✗ alice  select  rows: tenant_id = '…000a'  leaked 1 of the 3 rows it should not see: id=4
coverage 1/8 cells (12.5%) · 7 unspecified (warn)
notes
  ○ alice  insert, update, delete
  ○ guest  select, insert, update, delete
1 failed · 0 passed · 0 inconclusive
