tests/snapshots/select__rows_using_true_leaks_the_other_tenant.snap
---
source: tests/select.rs
expression: "run(\"rows_using_true\", 1)"
---
notes
  ✗ alice  select  rows: tenant_id = '…000a'  leaked 3 of 3 rows: id=4, id=5, id=6
coverage 1/8 cells (12.5%) · 7 unspecified (warn)
notes
  ○ alice  insert, update, delete
  ○ guest  select, insert, update, delete
1 failed · 0 passed · 0 inconclusive
