tests/snapshots/select__subset_pass_when_fewer_rows_are_visible.snap
---
source: tests/select.rs
expression: "run(\"subset_pass\", 0)"
---
notes
  ✓ alice  select  rows: tenant_id = '…000a' (subset)  2 of 3 visible
coverage 1/8 cells (12.5%) · 7 unspecified (warn)
notes
  ○ alice  insert, update, delete
  ○ guest  select, insert, update, delete
0 failed · 1 passed · 0 inconclusive
