tests/snapshots/select__subset_using_true_leaks.snap
---
source: tests/select.rs
expression: "run(\"subset_using_true\", 1)"
---
notes
  ✗ alice  select  rows: tenant_id = '…000a' (subset)  leaked 3 of 3 rows: id=4, id=5, id=6
1 failed · 0 passed · 0 inconclusive
